--- a/apps/house-plan/src/app/app.html
+++ b/apps/house-plan/src/app/app.html
@@ -1,2 +1,4 @@
-<app-nx-welcome></app-nx-welcome>
-<router-outlet></router-outlet>
+<!-- <app-nx-welcome></app-nx-welcome> -->
+ <main>
+     <router-outlet></router-outlet>
+ </main>
