header to new-project-form

--- a/apps/house-plan/src/app/app.html
+++ b/apps/house-plan/src/app/app.html
@@ -1,4 +1,6 @@
-<!-- <app-nx-welcome></app-nx-welcome> -->
- <main>
-     <router-outlet></router-outlet>
- </main>
+
+
+
+    <main class="app-main-content">
+        <router-outlet></router-outlet>
+    </main>
